# stoqster

./: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  USECASES.md  package.json  quasar.conf.js  vite.config.js
.github/workflows/: release.yml  test.yml
src/: index.template.html  main.js  styles.css
src-electron/: electron-main.js  electron-preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: fbindexAPI.js  fiAPI.js  fiAPI.test.js  helpers.js  ibindexAPI.js  ibindexAPI.mjs  ibindexAPI.test.mjs  stockAPI.js
src/api/ibindex/: ibindexAPI.js
src/boot/: localforage.js
src/components/: CAlertDialog.vue  CDashboard.vue  CIbindex.vue  CIbindexCompanyEvents.vue  CIbindexCompanyHoldings.vue  CIbindexRebatePremium.vue  CompanyDetails.vue  ComponentAlertDialog.vue  ComponentDashboard.vue  ComponentFbindex.vue  ComponentFundHoldings.vue  ComponentFunds.vue  ComponentIbindex.vue  ComponentIbindexCompanyEvents.vue  ComponentIbindexCompanyHoldings.vue  ComponentIbindexRebatePremium.vue  ComponentStocks.vue
src/layouts/: MainLayout.vue
src/pages/: Error404.vue  PDashboard.vue  PIbindex.vue  PIbindexWeights.vue  PageDashboard.vue  PageFbindex.vue  PageFunds.vue  PageIbindex.vue  PageIbindexWeights.vue  PageStocks.vue
src/router/: routes.js
src/store/: index.js  mutations.js  plugins.js
src/stores/: settings-store.js
