[package]
name = "stoqster"
version = "2.0.0"
description = "A Tauri App"
authors = ["Péter Blénessy"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["devtools"] }
tauri-plugin-http = "2.0.0"
tauri-plugin-updater = "2.0.0"

[lib]
name = "stoqster_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0"
